--- a/UAV-IQ-Marketing/app/css/main.css
+++ b/UAV-IQ-Marketing/app/css/main.css
@@ -10,6 +10,9 @@
       color: #FFF; }
       .home .jumbotron .container h1 {
         font-size: 50px; }
+        @media only screen and (max-device-width: 1024px) {
+          .home .jumbotron .container h1 {
+            font-size: 70px !important; } }
       .home .jumbotron .container p {
         font-size: 25px; }
       .home .jumbotron .container .button .btn {
@@ -46,14 +49,22 @@
     .home #industries div img {
       width: 100%; }
     .home #industries div h2 {
-      transform: translateX(-50%);
       text-align: center;
       position: absolute;
       font-size: 40px;
       color: #FFF;
       margin: 0;
+      position: absolute;
+      top: 50%;
       left: 50%;
-      top: 40%; }
+      transform: translate(-50%, -50%); }
+    .home #industries div p {
+      transform: translate(-50%, -50%);
+      position: absolute;
+      text-align: center;
+      color: #fff;
+      left: 50%;
+      bottom: 0; }
   .home #industries .fa {
     text-align: center;
     margin-top: 25px;
@@ -93,8 +104,7 @@
     font-size: 13px; }
   .home #observe .section-sub-header {
     text-align: center;
-    font-size: 13px;
-    color: #A3CB00; }
+    font-size: 13px; }
   .home #observe .wrap {
     position: relative;
     margin-top: 50px;
@@ -204,22 +214,24 @@
       transform: translateX(-50%);
       margin: 0 auto; }
   @media only screen and (max-device-width: 1024px) {
-    .home .jumbotron .container h1 {
-      font-size: 55px;
-      text-align: center; }
-    .home .jumbotron .container p {
-      font-size: 25px;
-      text-align: center; }
-    .home .jumbotron .container .button .btn {
-      background-color: #A3CB00;
-      border: none;
-      border-radius: 0;
-      padding: 10px 35px;
-      font-size: 35px; }
-    .home .jumbotron .container .button span {
-      font-size: 17px; }
-    .home .jumbotron .container .banner {
+    .home .jumbotron .container {
       width: 100%; }
+      .home .jumbotron .container h1 {
+        font-size: 55px;
+        text-align: center; }
+      .home .jumbotron .container p {
+        font-size: 25px;
+        text-align: center; }
+      .home .jumbotron .container .button .btn {
+        background-color: #A3CB00;
+        border: none;
+        border-radius: 0;
+        padding: 10px 35px;
+        font-size: 35px; }
+      .home .jumbotron .container .button span {
+        font-size: 17px; }
+      .home .jumbotron .container .banner {
+        width: 100%; }
     .home #industries .section-header {
       font-size: 35px; }
     .home #industries .section-sub-header {
@@ -391,6 +403,9 @@ nav {
       .wineflight .jumbotron .container h1 {
         font-size: 50px;
         text-align: center; }
+        @media only screen and (max-device-width: 1024px) {
+          .wineflight .jumbotron .container h1 {
+            font-size: 70px !important; } }
       .wineflight .jumbotron .container p {
         font-size: 25px;
         text-align: center; }
@@ -680,6 +695,9 @@ nav {
       .datacollection .jumbotron .container h1 {
         font-size: 50px;
         text-align: center; }
+        @media only screen and (max-device-width: 1024px) {
+          .datacollection .jumbotron .container h1 {
+            font-size: 70px !important; } }
       .datacollection .jumbotron .container p {
         font-size: 25px;
         text-align: center; }
