--- a/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
@@ -29,6 +29,10 @@
         h1{
           font-size: 50px;
           text-align: center;
+
+          @media only screen and (max-device-width: 1024px) {
+            font-size: 70px !important;
+          }
         }
 
         p{
