--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -14,6 +14,10 @@
 
       h1{
         font-size: 50px;
+
+        @media only screen and (max-device-width: 1024px) {
+          font-size: 70px !important;
+        }
       }
 
       p{
@@ -76,15 +80,24 @@
         width:100%;
       }
       h2{
-        transform: translateX(-50%);
         text-align: center;
         position: absolute;
         font-size: 40px;
         color:#FFF;
         margin: 0;
+        position: absolute;
+        top: 50%;
         left: 50%;
-        top: 40%;
+        transform: translate(-50%, -50%);
+      }
 
+      p{
+        transform: translate(-50%, -50%);
+        position: absolute;
+        text-align: center;
+        color:#fff;
+        left: 50%;
+        bottom:0;
       }
     }
     .fa{
@@ -155,7 +168,7 @@
     .section-sub-header{
       text-align: center;
       font-size: 13px;
-      color: #A3CB00;
+      // color: #A3CB00;
     }
 
     .wrap{
@@ -324,9 +337,8 @@
 
   @media only screen and (max-device-width: 1024px) {
     .jumbotron{
-
       .container{
-
+        width: 100%;
         h1{
           font-size: 55px;
           text-align: center;
