--- a/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
@@ -16,7 +16,7 @@
       }
 
       @media only screen and (max-device-width: 1024px) {
-        background-size: 120%;
+        background-size: 126%;
       }
 
       .container{
@@ -36,7 +36,7 @@
         }
 
         p{
-          font-size: 25px;
+          font-size: 35px;
           text-align: center;
         }
 
@@ -46,6 +46,7 @@
             border: none;
             border-radius:0;
             padding: 10px 35px;
+            font-size: 45px;
           }
 
           span{
@@ -121,7 +122,7 @@
           }
 
           @media only screen and (max-device-width: 768px) {
-            padding:0px 350px;
+            padding:0px 351.5px;
           }
         }
 
@@ -144,7 +145,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 1024px) {
-          font-size:45px;
+          font-size:65px;
         }
       }
 
@@ -160,7 +161,7 @@
             font-size: 45px;
           }
 
-          @media only screen and (max-device-width: 1024px) {
+          @media only screen and (min-device-width: 1024px) {
             font-size:20px;
           }
         }
@@ -174,7 +175,7 @@
           }
 
           @media only screen and (max-device-width: 1024px) {
-            font-size:12px;
+            font-size:25px;
           }
         }
 
@@ -187,7 +188,7 @@
           }
 
           @media only screen and (max-device-width: 768px) {
-            padding:0px 300px;
+            padding:0px 333px;
           }
         }
       }
