--- a/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
@@ -74,6 +74,7 @@
 
         .section-header{
           font-size: 35px ;
+          margin-bottom:20px;
         }
         .section-sub-header{
           font-size: 30px;
