--- a/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
@@ -7,7 +7,7 @@
       // background-image: url('../img/TV-Colchagua.png');
       background-repeat: no-repeat;
       background-color:#000;
-      max-height:700px;
+      max-height:800px;
       overflow: hidden;
 
       .container{
@@ -38,11 +38,13 @@
         }
 
         .button{
+          margin-top: 48px;
           .btn{
             background-color:#A3CB00;
             border: none;
             border-radius:0;
             padding: 10px 35px;
+            font-size: 45px;
           }
 
           span{
@@ -97,6 +99,7 @@
 
         h2{
           text-align: center;
+          font-weight: bold;
 
           @media only screen and (max-device-width: 768px) {
             font-size: 45px;
@@ -226,19 +229,34 @@
           li{
             font-size: 30px;
             // float: right;
-            padding-left:40px;
+            padding-left:50px;
             position: relative;
             margin-bottom:10px;
 
             @media only screen and (min-device-width: 1024px) {
               font-size: 20px;
             }
-            img{
+            .img{
+              -webkit-transition: all .3s;/* Safari */
+              -moz-transition: all .3s;/*Firefox*/
+              -ms-transition: all .3s;/*IE10+*/
+              -o-transition: all .3s;/*Opera*/
+              transition: all .3s;
               position: absolute;
-              top:7px;
+              top:0;
               left: 0;
-              width:30px;
+              width:40px;
+              height: 40px;
+              background: #FFF;
+              border: solid 3px #A3CB00;
+              border-radius: 50%;
             }
+          }
+        }
+        .current{
+          .img{
+            background: #A3CB00;
+            border: solid 3px #FFF;
           }
         }
       }
@@ -287,18 +305,22 @@
           li{
             font-size: 30px;
             // float: right;
-            padding-left:40px;
+            padding-left:50px;
             position: relative;
             margin-bottom:10px;
 
             @media only screen and (min-device-width: 1024px) {
               font-size: 20px;
             }
-            img{
+            .img{
               position: absolute;
-              top:7px;
+              top:0;
               left: 0;
-              width:30px;
+              width:40px;
+              height: 40px;
+              background: #FFF;
+              border: solid 3px #A3CB00;
+              border-radius: 50%;
             }
           }
         }
